# koban

./: .envrc  .gitignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  codecov.yml  flake.nix  install.sh  release-please-config.json  release-plz.toml
.github/: copilot-instructions.md
.github/instructions/: docs.instructions.md  release.instructions.md  rust.instructions.md
.github/workflows/: ci.yml  nightly.yml  pages.yml  release-please.yml  release-plz.yml
crates/koban/: CHANGELOG.md  Cargo.toml  README.md
crates/koban-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/koban-cli/src/: auth.rs  cli.rs  cli_agent.rs  commands.rs  completion.rs  config_store.rs  endpoint_runner.rs  file_paths.rs  invoice.rs  main.rs  payload.rs  render.rs  resource_routes.rs  update.rs
crates/koban-cli/src/skill/: mod.rs  templates.rs
crates/koban-cli/src/tests/: cli.rs  commands.rs  endpoints.rs  mod.rs  render.rs  resource_actions.rs  resource_parity.rs
crates/koban-cli/tests/: auth_tests.rs  cli_tests.rs  code_health_tests.rs  completions_tests.rs  list_pagination_tests.rs  path_safety_tests.rs  skill_tests.rs
crates/koban/src/: api.rs  error.rs  lib.rs  resource.rs  typed.rs  util.rs
crates/koban/src/models/: entities.rs  mod.rs
crates/koban/src/tests/: config.rs  mod.rs  models.rs
docs/: invoice-ninja-api.md
scripts/: check-code-health.sh  smoke-all-demo.sh
skills/koban/: SKILL.md
src/: api.rs  cli.rs  commands.rs  config.rs  error.rs  invoice.rs  lib.rs  main.rs  payload.rs  render.rs  resource.rs  tests.rs  update.rs
src/tests/: api.rs  commands.rs  config.rs  invoice.rs  mod.rs  payload.rs  render.rs
tests/: cli_tests.rs  code_health_tests.rs  completions_tests.rs
website/: .prettierignore  index.md  package.json
website/.vitepress/: config.ts
website/.vitepress/theme/: style.css
website/commands/: auth.md  endpoints.md  index.md  invoices.md  resources.md  skill.md
website/guide/: completions.md  configuration.md  index.md  installation.md  output.md  quickstart.md  safety.md  updating.md
website/reference/: environment.md  resource-families.md
