[package]
name = "koban"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
authors = ["James Brink <brink.james@gmail.com>"]
description = "A Rust CLI for Invoice Ninja, built for humans and AI agents"
homepage = "https://github.com/jamesbrink/koban"
documentation = "https://docs.rs/koban"
repository = "https://github.com/jamesbrink/koban"
readme = "README.md"
keywords = ["invoice-ninja", "invoice", "cli", "agents", "api"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.6.1", features = ["derive", "wrap_help"] }
clap_complete = { version = "4.6.0", features = ["unstable-dynamic"] }
clap_complete_nushell = "4.6.0"
flate2 = "1.1.5"
miette = { version = "7.6.0", features = ["fancy"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "multipart", "rustls-tls-webpki-roots"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
tabled = "0.20.0"
tar = "0.4.44"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
url = "2.5.8"

[dev-dependencies]
assert_cmd = "2.2.2"
httpmock = "0.8.3"
predicates = "3.1.4"
tempfile = "3.23.0"
