[workspace]
resolver = "3"
members = ["crates/koban", "crates/koban-cli"]

[workspace.package]
edition = "2024"
rust-version = "1.95"
license = "MIT"
authors = ["James Brink <brink.james@gmail.com>"]
homepage = "https://github.com/jamesbrink/koban"
repository = "https://github.com/jamesbrink/koban"

[workspace.dependencies]
# Library + CLI shared runtime dependencies (single source of version truth).
clap = { version = "4.6.1", features = ["derive", "wrap_help"] }
clap_complete = { version = "4.6.0", features = ["unstable-dynamic"] }
clap_complete_nushell = "4.6.0"
directories = "6.0.0"
flate2 = "1.1.5"
# Keyring backends are target-gated. Linux uses the kernel keyutils backend
# (`linux-native`) rather than secret-service so the binary stays portable: no
# libdbus/system C dependency, and a synchronous backend that won't block inside
# koban's tokio runtime.
keyring = { version = "3.6.3", default-features = false, features = ["apple-native", "windows-native", "linux-native"] }
miette = { version = "7.6.0", features = ["fancy"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "multipart", "rustls-tls-webpki-roots"] }
rpassword = "7.5.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
tabled = "0.20.0"
tar = "0.4.44"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
url = "2.5.8"
# Reuse flate2 for deflate so the skill bundler adds no new compression backend.
zip = { version = "8.6.0", default-features = false, features = ["deflate-flate2"] }

# Dev/test shared dependencies.
assert_cmd = "2.2.2"
httpmock = "0.8.3"
predicates = "3.1.4"
tempfile = "3.23.0"

# The koban library is consumed by koban-cli through the workspace.
koban = { version = "0.2.1", path = "crates/koban" }
