[package]
name = "koban-cli"
version = "0.2.0"
description = "A Rust CLI for Invoice Ninja, built for humans and AI agents"
documentation = "https://docs.rs/koban-cli"
keywords = ["invoice-ninja", "invoice", "cli", "agents", "api"]
categories = ["command-line-utilities"]
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

# The package is `koban-cli` (so it can be published alongside the `koban`
# library), but the installed executable stays `koban`.
[[bin]]
name = "koban"
path = "src/main.rs"

[features]
# OS keychain storage for `koban auth login --keychain`. On by default so the
# flag works out of the box on desktops; disable for minimal/headless builds
# (`--no-default-features`) to drop the keyring backend dependencies.
default = ["keychain"]
keychain = ["dep:keyring"]

[dependencies]
koban = { workspace = true, features = ["miette"] }
clap.workspace = true
clap_complete.workspace = true
clap_complete_nushell.workspace = true
directories.workspace = true
flate2.workspace = true
keyring = { workspace = true, optional = true }
miette.workspace = true
rpassword.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tabled.workspace = true
tar.workspace = true
tokio.workspace = true
url.workspace = true
zip.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
httpmock.workspace = true
predicates.workspace = true
tempfile.workspace = true
